<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_main_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="416dp"
            android:contentDescription="@string/item_data_item"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_creator="1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_two"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/activity_main_two"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="@+id/activity_main_two"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="140dp"
            android:id="@+id/title"
            android:textSize="24sp"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintTop_creator="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="140dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_two"
            android:layout_marginStart="16dp"
            tools:layout_constraintLeft_creator="0"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:layout_marginTop="16dp"
            tools:layout_constraintTop_creator="0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_editor_absoluteX="73dp"
            app:layout_editor_absoluteY="176dp"
            android:id="@+id/cameraType"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintTop_creator="1"
            app:layout_constraintRight_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/cameraLabel"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="8dp"
            tools:layout_constraintTop_creator="0"
            app:layout_constraintRight_toRightOf="@+id/cameraLabel"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:text="@string/item_data_prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="189dp"
            android:id="@+id/cameraLabel"
            android:labelFor="@+id/cameraType"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintBaseline_creator="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="189dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_two"
            android:layout_marginStart="16dp"
            tools:layout_constraintLeft_creator="0"
            app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
            tools:layout_constraintBaseline_creator="0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_editor_absoluteX="73dp"
            app:layout_editor_absoluteY="226dp"
            android:id="@+id/EmailType"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintTop_creator="1"
            app:layout_constraintRight_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/cameraLabel"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/cameraType"
            android:layout_marginTop="8dp"
            tools:layout_constraintTop_creator="0"
            app:layout_constraintRight_toRightOf="@+id/cameraLabel"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:text="@string/item_data_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="189dp"
            android:id="@+id/EmailLabel"
            android:labelFor="@+id/EmailLabel"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintBaseline_creator="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="189dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_two"
            android:layout_marginStart="16dp"
            tools:layout_constraintLeft_creator="0"
            app:layout_constraintBaseline_toBaselineOf="@+id/EmailType"
            tools:layout_constraintBaseline_creator="0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_editor_absoluteX="73dp"
            app:layout_editor_absoluteY="226dp"
            android:id="@+id/AddressType"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintTop_creator="1"
            app:layout_constraintRight_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/cameraLabel"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/EmailType"
            android:layout_marginTop="8dp"
            tools:layout_constraintTop_creator="0"
            app:layout_constraintRight_toRightOf="@+id/cameraLabel"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/AddrressLabel"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginLeft="16dp"
            android:labelFor="@+id/AddrressLabel"
            android:text="@string/item_data_candm"
            app:layout_constraintBaseline_creator="1"
            app:layout_constraintBaseline_toBaselineOf="@+id/AddressType"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_two"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="189dp"
            tools:layout_constraintBaseline_creator="0"
            tools:layout_constraintLeft_creator="0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_editor_absoluteX="73dp"
            app:layout_editor_absoluteY="226dp"
            android:id="@+id/BusinessHoursType"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintTop_creator="1"
            app:layout_constraintRight_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/cameraLabel"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/AddressType"
            android:layout_marginTop="8dp"
            tools:layout_constraintTop_creator="0"
            app:layout_constraintRight_toRightOf="@+id/cameraLabel"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:text="@string/item_data_offers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="189dp"
            android:id="@+id/BusinessHoursLabel"
            android:labelFor="@+id/BusinessHoursLabel"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintBaseline_creator="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="189dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_main_two"
            android:layout_marginStart="16dp"
            tools:layout_constraintLeft_creator="0"
            app:layout_constraintBaseline_toBaselineOf="@+id/BusinessHoursType"
            tools:layout_constraintBaseline_creator="0" />

        <android.support.constraint.Barrier
            android:id="@+id/labelBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="cameraLabel,EmailLabel,AddrressLabel,BusinessHoursLabel"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/upload"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            app:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:onClick="openItemDetails"
            android:text="@string/item_data_item"
            app:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/activity_main_two"
            app:layout_constraintTop_toBottomOf="@+id/BusinessHoursType"
            app:layout_constraintVertical_bias="0.026"
            app:layout_editor_absoluteX="307dp"
            app:layout_editor_absoluteY="538dp"
            tools:layout_constraintBottom_creator="0"
            tools:layout_constraintRight_creator="0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>