<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_store_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
        <ImageView
            android:layout_width="0dp"
            android:contentDescription="@string/store_data_shop"
            android:layout_height="0dp"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp"
            android:id="@+id/header"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintTop_creator="1"
            app:layout_constraintRight_creator="1"
            app:layout_constraintBottom_creator="1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_store_data"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toTopOf="@+id/activity_store_data"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintRight_toRightOf="@+id/activity_store_data"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/favorite"
            android:layout_marginBottom="16dp"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:src="@drawable/ic_star"
            android:onClick="storeVisit"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_editor_absoluteX="359dp"
            app:layout_editor_absoluteY="104dp"
            android:id="@+id/favorite"
            android:background="@drawable/ic_launcher_background"
            android:padding="5dp"
            android:contentDescription="@string/store_data_shop"
            app:layout_constraintTop_creator="1"
            app:layout_constraintRight_creator="1"
            app:layout_constraintBottom_creator="0"
            tools:layout_editor_absoluteX="359dp"
            tools:layout_editor_absoluteY="104dp"
            app:layout_constraintTop_toTopOf="@+id/activity_store_data"
            tools:layout_constraintTop_creator="0"
            app:layout_constraintRight_toRightOf="@+id/activity_store_data"
            android:layout_marginEnd="16dp"
            tools:layout_constraintRight_creator="0"
            app:layout_constraintBottom_toBottomOf="@+id/activity_store_data"
            android:layout_marginBottom="16dp"
            tools:layout_constraintBottom_creator="0"
            app:layout_constraintVertical_bias="0.19" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="140dp"
            android:onClick="openWebsite"
            android:id="@+id/title"
            android:textSize="24sp"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintTop_creator="0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="140dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_store_data"
            android:layout_marginStart="16dp"
            tools:layout_constraintLeft_creator="0"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:layout_marginTop="16dp"
            tools:layout_constraintTop_creator="0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:ems="10"
            app:layout_editor_absoluteX="73dp"
            app:layout_editor_absoluteY="176dp"
            android:id="@+id/cameraType"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintTop_creator="1"
            app:layout_constraintRight_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/cameraLabel"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="8dp"
            tools:layout_constraintTop_creator="0"
            app:layout_constraintRight_toRightOf="@+id/cameraLabel"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:text="@string/store_data_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="phoneCall"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="189dp"
            android:id="@+id/cameraLabel"
            android:labelFor="@+id/cameraType"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintBaseline_creator="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="189dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_store_data"
            android:layout_marginStart="16dp"
            tools:layout_constraintLeft_creator="0"
            app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
            tools:layout_constraintBaseline_creator="0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:ems="10"
            app:layout_editor_absoluteX="73dp"
            app:layout_editor_absoluteY="226dp"
            android:id="@+id/EmailType"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintTop_creator="1"
            app:layout_constraintRight_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/cameraLabel"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/cameraType"
            android:layout_marginTop="8dp"
            tools:layout_constraintTop_creator="0"
            app:layout_constraintRight_toRightOf="@+id/cameraLabel"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:text="@string/store_data_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="189dp"
            android:id="@+id/EmailLabel"
            android:onClick="sendEmail"
            android:labelFor="@+id/EmailLabel"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintBaseline_creator="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="189dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_store_data"
            android:layout_marginStart="16dp"
            tools:layout_constraintLeft_creator="0"
            app:layout_constraintBaseline_toBaselineOf="@+id/EmailType"
            tools:layout_constraintBaseline_creator="0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:ems="10"
            app:layout_editor_absoluteX="73dp"
            app:layout_editor_absoluteY="226dp"
            android:id="@+id/AddressType"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintTop_creator="1"
            app:layout_constraintRight_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/cameraLabel"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/EmailType"
            android:layout_marginTop="8dp"
            tools:layout_constraintTop_creator="0"
            app:layout_constraintRight_toRightOf="@+id/cameraLabel"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:text="@string/store_data_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="189dp"
            android:id="@+id/AddrressLabel"
            android:labelFor="@+id/AddrressLabel"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintBaseline_creator="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="189dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_store_data"
            android:layout_marginStart="16dp"
            tools:layout_constraintLeft_creator="0"
            app:layout_constraintBaseline_toBaselineOf="@+id/AddressType"
            tools:layout_constraintBaseline_creator="0" />

        <TextView
            android:id="@+id/BusinessHoursType"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/cameraLabel"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/cameraLabel"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/AddressType"
            app:layout_editor_absoluteX="73dp"
            app:layout_editor_absoluteY="226dp"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="0" />

        <TextView
            android:text="@string/store_data_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="189dp"
            android:id="@+id/BusinessHoursLabel"
            android:labelFor="@+id/BusinessHoursLabel"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintBaseline_creator="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="189dp"
            app:layout_constraintLeft_toLeftOf="@+id/activity_store_data"
            android:layout_marginStart="16dp"
            tools:layout_constraintLeft_creator="0"
            app:layout_constraintBaseline_toBaselineOf="@+id/BusinessHoursType"
            tools:layout_constraintBaseline_creator="0" />

        <android.support.constraint.Barrier
            android:id="@+id/labelBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="cameraLabel,EmailLabel,AddrressLabel,BusinessHoursLabel" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_data_shop"
            android:textColor="@color/cardview_light_background"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_editor_absoluteX="307dp"
            app:layout_editor_absoluteY="538dp"
            android:id="@+id/upload"
            android:onClick="openItemDetails"
            app:layout_constraintRight_creator="1"
            app:layout_constraintBottom_creator="1"
            tools:layout_editor_absoluteX="307dp"
            tools:layout_editor_absoluteY="538dp"
            app:layout_constraintRight_toRightOf="@+id/activity_store_data"
            android:layout_marginEnd="16dp"
            tools:layout_constraintRight_creator="0"
            app:layout_constraintBottom_toBottomOf="@+id/activity_store_data"
            android:layout_marginBottom="16dp"
            tools:layout_constraintBottom_creator="0"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="354dp"
            android:layout_height="93dp"
            android:layout_gravity="fill"
            android:background="#ccc"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fadingEdge="vertical"
            app:layout_constraintBottom_creator="0"
            app:layout_constraintBottom_toTopOf="@+id/upload"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/activity_store_data"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/activity_store_data"
            app:layout_constraintTop_creator="0"
            app:layout_constraintTop_toBottomOf="@+id/BusinessHoursLabel"
            app:layout_constraintVertical_bias="0.49"
            app:layout_editor_absoluteX="16dp"
            app:layout_editor_absoluteY="274dp"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>